--- a/vignettes/efdcr_intro.Rmd
+++ b/vignettes/efdcr_intro.Rmd
@@ -20,7 +20,7 @@ It provides functions for pre- and post-processing the data reqired and generate
 Note that the package is currently under development, the APIs will be changed with more functionalities being added. I will try my best to keep the consistency of the APIs and to update carefully. 
 
 ## Installation of efdcr
-You can Install the latest development version of efdcr from [GitHub](www.github.com) with:
+You can Install the latest development version of efdcr from [GitHub](https://www.github.com) with:
 
 ```{r,eval=FALSE}
 if (!require("devtools")) {
